fix spacing before first toggle

--- a/assets/scss/components/_tree.scss
+++ b/assets/scss/components/_tree.scss
@@ -114,7 +114,5 @@
 }
 
 .Tree-toggle {
-    & + & {
-        margin-top: 10px;
-    }
+    margin-top: 10px;
 }
